--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,11 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-highlightable": "0.0.2",
+    "react-lineto": "^3.1.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "reactjs-popup": "^1.3.2",
     "reactstrap": "^8.0.0"
   },
   "scripts": {
